# semantic-decoding

./: .gitignore  Dockerfile  pyproject.toml
decoding/: GPT.py  StimulusModel.py  config.py  decode_words.py  decode_words2.py  decode_words_onebyone.py  decode_words_with_2model.py  eval_bertscore.old.py  eval_bertscore.py  eval_bertscore_onebyone.py  feature_spaces.py  null_distribution.py  run_decoder.py  train_EM.py  train_WR.py  utils_decode.py  utils_stim.py
decoding/utils_ridge/: SemanticModel.py  dsutils.py  interpdata.py  ridge.py
